# simple-calc

./: Cargo.toml
src/: calc.rs  main.rs  parser.rs
